--- a/view/publicView/public.homepage.html.twig
+++ b/view/publicView/public.homepage.html.twig
@@ -2,3 +2,26 @@
 {% block title %}{{ parent() }} | Accueil{% endblock %}
 {% block htitle %}{{ parent() }} - Accueil{% endblock %}
 {% block hdesc %}BlOOG 2 est un blog sur la gestion des bases de données{% endblock %}
+{% block navbar %}
+    <!-- Responsive navbar-->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="./">BlOOG 2</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                {{ menu|raw }}
+                <!--<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link" href="./">Accueil</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Blog</a>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
+                            <li><a class="dropdown-item" href="#">Blog Home</a></li>
+                            <li><a class="dropdown-item" href="#">Blog Post</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Blog</a></li>
+                </ul>-->
+            </div>
+        </div>
+    </nav>{% endblock %}
